--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "dev": "cross-env APP_ENV=development next dev --turbopack",
+    "build:stg": "cross-env APP_ENV=stg next build",
+    "build:prod": "cross-env APP_ENV=production next build",
+    "build:prepod": "cross-env APP_ENV=prepod next build",
+    "start:stg": "cross-env APP_ENV=stg next start",
+    "start:prod": "cross-env APP_ENV=production next start",
+    "start:prepod": "cross-env APP_ENV=prepod next start",
+    "build_sw": "webpack --config webpack.config.js",
+    "build_sv": "webpack --config webpack_sv.config.js"
   },
   "dependencies": {
     "next": "16.1.6",
