--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "next start",
+    "start": "cross-env APP_ENV=production next start",
     "lint": "next lint",
     "dev": "cross-env APP_ENV=development next dev --turbopack",
     "build:stg": "cross-env APP_ENV=stg next build",
